--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "Tanmays Portfolio",
-  "homepage": "https://shah-tanmay.github.io",
+  "name": "Samarths Portfolio",
+  "homepage": "https://samarth1301.github.io",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
